[gd_scene load_steps=21 format=3 uid="uid://cqpxw627b3wta"]

[ext_resource type="PackedScene" uid="uid://b7x7cet5prnd0" path="res://logistics/interactable/interactable.tscn" id="1_csql7"]
[ext_resource type="Script" path="res://logistics/assignments_module/AssignmentsModule.gd" id="1_gs4kk"]
[ext_resource type="Texture2D" uid="uid://6n5bws7pisql" path="res://aseprite-files/assignment-module.png" id="2_gcg0b"]
[ext_resource type="PackedScene" uid="uid://smbhlrn06woj" path="res://logistics/technologyManager/food_tech_tree.tscn" id="3_ty68p"]
[ext_resource type="Theme" uid="uid://c6sutivwcotru" path="res://themes/standard-font-theme.tres" id="4_wdy85"]
[ext_resource type="Texture2D" uid="uid://dx04fump3ytgl" path="res://aseprite-files/screen.png" id="5_bo8bl"]
[ext_resource type="PackedScene" uid="uid://b7axyll4oswre" path="res://logistics/technologyManager/fuel_tech_tree.tscn" id="5_g4lgg"]
[ext_resource type="PackedScene" uid="uid://d3sajvl14bsgp" path="res://logistics/assignments_module/technology_points_display.tscn" id="5_rmo44"]
[ext_resource type="PackedScene" uid="uid://h2hpl563bx80" path="res://logistics/technologyManager/building_tech_tree.tscn" id="6_27t6c"]
[ext_resource type="Script" path="res://ButtonSoundEffects.gd" id="7_2vpml"]
[ext_resource type="PackedScene" uid="uid://d3qkbbvucy14x" path="res://logistics/technologyManager/entertainment_tech_tree.tscn" id="7_rdgb5"]
[ext_resource type="PackedScene" uid="uid://bfkuaeerlmupi" path="res://logistics/technologyManager/efficiency_tech_tree.tscn" id="8_v7wp5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gka08"]
radius = 64.0078

[sub_resource type="RectangleShape2D" id="RectangleShape2D_73m1m"]
size = Vector2(111.898, 60.8915)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eug6p"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.12549, 0.223529, 0.309804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(0.305882, 0.286275, 0.372549, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i544o"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.145098, 0.254902, 0.352941, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(0.164706, 0.662745, 0.47451, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wgmkr"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.0705882, 0.141176, 0.2, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(0.305882, 0.286275, 0.372549, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hhncd"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.12549, 0.223529, 0.309804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(0.305882, 0.286275, 0.372549, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tfqey"]
texture = ExtResource("5_bo8bl")
modulate_color = Color(1, 1, 1, 0.882353)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q0usc"]
bg_color = Color(0.0313726, 0.0784314, 0.117647, 1)

[node name="AssignmentsModule" type="Node2D"]
script = ExtResource("1_gs4kk")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(33, -6)
scale = Vector2(2, 2)
texture = ExtResource("2_gcg0b")

[node name="Interactable" parent="." instance=ExtResource("1_csql7")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
shape = SubResource("CircleShape2D_gka08")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-1.5, -4)
rotation = -0.576933
shape = SubResource("RectangleShape2D_73m1m")
debug_color = Color(0.882353, 0.286275, 0.466667, 0.419608)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="TabContainer" type="TabContainer" parent="CanvasLayer"]
offset_right = 640.0
offset_bottom = 360.0
theme = ExtResource("4_wdy85")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_eug6p")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_i544o")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_wgmkr")
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_hhncd")
theme_override_styles/panel = SubResource("StyleBoxTexture_tfqey")
theme_override_styles/tabbar_background = SubResource("StyleBoxFlat_q0usc")
all_tabs_in_front = true

[node name="Food" type="Control" parent="CanvasLayer/TabContainer"]
layout_mode = 2
mouse_filter = 2

[node name="FoodTechTree" parent="CanvasLayer/TabContainer/Food" instance=ExtResource("3_ty68p")]
position = Vector2(-116, -6)

[node name="Line2D" parent="CanvasLayer/TabContainer/Food/FoodTechTree/AutoGatherTrack" index="1"]
default_color = Color(0.172549, 0, 0.564706, 1)

[node name="FasterAutoGather" parent="CanvasLayer/TabContainer/Food/FoodTechTree" index="1"]
position = Vector2(173, 171)

[node name="DecreaseChops" parent="CanvasLayer/TabContainer/Food/FoodTechTree" index="2"]
position = Vector2(173, 269)

[node name="ExitButton" type="Button" parent="CanvasLayer/TabContainer/Food"]
layout_mode = 0
offset_left = 490.0
offset_top = 260.0
offset_right = 611.0
offset_bottom = 310.0
text = "EXIT"
script = ExtResource("7_2vpml")

[node name="TechnologyPointsDisplay" parent="CanvasLayer/TabContainer/Food" instance=ExtResource("5_rmo44")]
position = Vector2(563, 38)

[node name="Label" type="Label" parent="CanvasLayer/TabContainer/Food"]
layout_mode = 0
offset_left = 202.0
offset_top = 292.0
offset_right = 463.0
offset_bottom = 307.0
text = "Select new skills using technology points."

[node name="Fuel" type="Control" parent="CanvasLayer/TabContainer"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="ExitButton" type="Button" parent="CanvasLayer/TabContainer/Fuel"]
layout_mode = 0
offset_left = 490.0
offset_top = 260.0
offset_right = 611.0
offset_bottom = 310.0
text = "EXIT"
script = ExtResource("7_2vpml")

[node name="FuelTechTree" parent="CanvasLayer/TabContainer/Fuel" instance=ExtResource("5_g4lgg")]
position = Vector2(-116, -6)

[node name="FasterAutoGather" parent="CanvasLayer/TabContainer/Fuel/FuelTechTree" index="1"]
position = Vector2(173, 171)

[node name="FasterFuelGauge" parent="CanvasLayer/TabContainer/Fuel/FuelTechTree" index="2"]
position = Vector2(173, 269)

[node name="TechnologyPointsDisplay" parent="CanvasLayer/TabContainer/Fuel" instance=ExtResource("5_rmo44")]
position = Vector2(563, 38)

[node name="Label" type="Label" parent="CanvasLayer/TabContainer/Fuel"]
layout_mode = 0
offset_left = 202.0
offset_top = 292.0
offset_right = 463.0
offset_bottom = 307.0
text = "Select new skills using technology points."

[node name="Building" type="Control" parent="CanvasLayer/TabContainer"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="ExitButton" type="Button" parent="CanvasLayer/TabContainer/Building"]
layout_mode = 0
offset_left = 490.0
offset_top = 260.0
offset_right = 611.0
offset_bottom = 310.0
text = "EXIT"
script = ExtResource("7_2vpml")

[node name="BuildingTechTree" parent="CanvasLayer/TabContainer/Building" instance=ExtResource("6_27t6c")]
position = Vector2(-116, -6)

[node name="FasterAutoGather" parent="CanvasLayer/TabContainer/Building/BuildingTechTree" index="1"]
position = Vector2(173, 171)

[node name="LowerTowerHeight" parent="CanvasLayer/TabContainer/Building/BuildingTechTree" index="2"]
position = Vector2(173, 269)

[node name="TechnologyPointsDisplay" parent="CanvasLayer/TabContainer/Building" instance=ExtResource("5_rmo44")]
position = Vector2(563, 38)

[node name="Label" type="Label" parent="CanvasLayer/TabContainer/Building"]
layout_mode = 0
offset_left = 202.0
offset_top = 292.0
offset_right = 463.0
offset_bottom = 307.0
text = "Select new skills using technology points."

[node name="Entertainment" type="Control" parent="CanvasLayer/TabContainer"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="ExitButton" type="Button" parent="CanvasLayer/TabContainer/Entertainment"]
layout_mode = 0
offset_left = 490.0
offset_top = 260.0
offset_right = 611.0
offset_bottom = 310.0
text = "EXIT"
script = ExtResource("7_2vpml")

[node name="EntertainmentTechTree" parent="CanvasLayer/TabContainer/Entertainment" instance=ExtResource("7_rdgb5")]
position = Vector2(-116, -6)

[node name="FasterAutoGather" parent="CanvasLayer/TabContainer/Entertainment/EntertainmentTechTree" index="1"]
position = Vector2(173, 171)

[node name="HighRisk" parent="CanvasLayer/TabContainer/Entertainment/EntertainmentTechTree" index="2"]
position = Vector2(173, 269)

[node name="TechnologyPointsDisplay" parent="CanvasLayer/TabContainer/Entertainment" instance=ExtResource("5_rmo44")]
position = Vector2(563, 38)

[node name="Label" type="Label" parent="CanvasLayer/TabContainer/Entertainment"]
layout_mode = 0
offset_left = 202.0
offset_top = 292.0
offset_right = 463.0
offset_bottom = 307.0
text = "Select new skills using technology points."

[node name="Efficiency" type="Control" parent="CanvasLayer/TabContainer"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="ExitButton" type="Button" parent="CanvasLayer/TabContainer/Efficiency"]
layout_mode = 0
offset_left = 490.0
offset_top = 260.0
offset_right = 611.0
offset_bottom = 310.0
text = "EXIT"
script = ExtResource("7_2vpml")

[node name="EfficiencyTechTree" parent="CanvasLayer/TabContainer/Efficiency" instance=ExtResource("8_v7wp5")]
position = Vector2(-116, -4)

[node name="SlowTime" parent="CanvasLayer/TabContainer/Efficiency/EfficiencyTechTree" index="1"]
position = Vector2(173, 171)

[node name="AutoCollect" parent="CanvasLayer/TabContainer/Efficiency/EfficiencyTechTree" index="2"]
position = Vector2(173, 269)

[node name="TechnologyPointsDisplay" parent="CanvasLayer/TabContainer/Efficiency" instance=ExtResource("5_rmo44")]
position = Vector2(563, 38)

[node name="Label" type="Label" parent="CanvasLayer/TabContainer/Efficiency"]
layout_mode = 0
offset_left = 202.0
offset_top = 292.0
offset_right = 463.0
offset_bottom = 307.0
text = "Select new skills using technology points."

[connection signal="player_exited_interactable" from="Interactable" to="." method="_on_interactable_player_exited_interactable"]
[connection signal="player_interacted" from="Interactable" to="." method="_on_interactable_player_interacted"]
[connection signal="mouse_entered" from="CanvasLayer/TabContainer/Food/ExitButton" to="CanvasLayer/TabContainer/Food/ExitButton" method="_on_button_hovered"]
[connection signal="pressed" from="CanvasLayer/TabContainer/Food/ExitButton" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/TabContainer/Fuel/ExitButton" to="CanvasLayer/TabContainer/Fuel/ExitButton" method="_on_button_hovered"]
[connection signal="pressed" from="CanvasLayer/TabContainer/Fuel/ExitButton" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/TabContainer/Building/ExitButton" to="CanvasLayer/TabContainer/Building/ExitButton" method="_on_button_hovered"]
[connection signal="pressed" from="CanvasLayer/TabContainer/Building/ExitButton" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/TabContainer/Entertainment/ExitButton" to="CanvasLayer/TabContainer/Entertainment/ExitButton" method="_on_button_hovered"]
[connection signal="pressed" from="CanvasLayer/TabContainer/Entertainment/ExitButton" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/TabContainer/Efficiency/ExitButton" to="CanvasLayer/TabContainer/Efficiency/ExitButton" method="_on_button_hovered"]
[connection signal="pressed" from="CanvasLayer/TabContainer/Efficiency/ExitButton" to="." method="_on_button_pressed"]

[editable path="CanvasLayer/TabContainer/Food/FoodTechTree"]
[editable path="CanvasLayer/TabContainer/Fuel/FuelTechTree"]
[editable path="CanvasLayer/TabContainer/Building/BuildingTechTree"]
[editable path="CanvasLayer/TabContainer/Entertainment/EntertainmentTechTree"]
[editable path="CanvasLayer/TabContainer/Efficiency/EfficiencyTechTree"]
